fix minor viewport style issues on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 
 html,
 body {
-	height: 100%;
+	min-height: 100vh;
+	min-height: 100dvh;
 	width: 100%;
 }
